# 2025-constituencies

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yml
data/interim/: overlap.csv
data/interim/area_overlap/: LSOA11_PARL25_area_overlap.parquet  PARL10_LAD23_area_overlap.parquet  PARL10_PARL25_area_overlap.parquet  PARL25_LAD23_area_overlap.parquet  PARL25_PARL10_area_overlap.parquet
data/interim/combo_overlap/: LSOA11_PARL25_combo_overlap.parquet  PARL10_LAD23_combo_overlap.parquet  PARL10_PARL25_combo_overlap.parquet  PARL25_LAD23_combo_overlap.parquet  PARL25_PARL10_combo_overlap.parquet
data/interim/pop_overlap/: LSOA11_PARL25_pop_overlap.parquet  PARL10_LAD23_pop_overlap.parquet  PARL10_PARL25_pop_overlap.parquet  PARL25_LAD23_pop_overlap.parquet  PARL25_PARL10_pop_overlap.parquet
data/raw/hex/: uk-wpc-hex-v1.0-july-2023.gpkg
docs/: _config.yml  index.md  postcode-converter.html
docs/js/: mini_lookup.js  pcon_2024.json  pcon_2024_lookup.json
docs/sass/: _bootstrap-compat.scss  mysoc.scss
notebooks/: create_postcode_lookup.ipynb  geo_combine.ipynb  overlap_analysis.ipynb  transform_small_area.ipynb
src/constituencies_2025/: area_overlap.py  build.py  pcon_overlap.py  pop_overlap.py  postcode_lookup.py
tests/: test_2025_constituencies.py  test_constituencies_2025.py
