[tool.poetry]
name = "constituencies_2025"
version = "0.1.0"
description = "Conversion and lookup files for 2025 UK Parliamentary constituencies"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_common = { path = "src/data_common/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
project = 'constituencies_2025.__main__:main'
notebook = "data_common.notebookcli.__main__:run"
dataset = "data_common.dataset.__main__:run"

[tool.pyright]
include = ["src", "notebooks"]
exclude = ["src/data_common/typings"]
stubPath = "src/data_common/typings"
typeCheckingMode = "basic"
reportPrivateImportUsage = "warning"

[tool.dataset]
dataset_dir = "data/packages"
publish_dir = "docs/"
publish_url = "https://pages.mysociety.org/2025_constituencies/"
credit_text = "If you find this data useful, please let us know to help us make the case for future funding."
credit_url = "https://survey.alchemer.com/s3/6876792/Data-usage"

[tool.ruff]
exclude = []
select = ["E", "F", "PTH"]
ignore = ["E501"]

[tool.notebook.settings]
default_page_title = "Settings file defined title"
